--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Learn how to obtain Paz y Salvo del SIMIT online, check Simit por placa and Simit por cédula, and clear traffic fines in Colombia quickly and easily.">
 <meta name="keywords" content="Paz y Salvo del SIMIT, Simit por placa, Simit por cédula, multas Colombia, comparendos Colombia, certificado Paz y Salvo, SIMIT Colombia">
 <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="k3vuqjTzyTdY_lLVao46IuANbwtwrA6BYUaqegpbogU" />
 <meta name="author" content="simit por placa">
 
   <style>
